--- a/src/components/counter/Counter.css
+++ b/src/components/counter/Counter.css
@@ -22,6 +22,12 @@
 }
 
 .count {
+    font-size: 50px;
+    padding: 10px;
+}
+
+.totalCount {
+    color: #00a5ab;
     font-size: 150px;
     padding: 20px;
 }
