Adding Reset Button to Counter

--- a/src/components/counter/Counter.css
+++ b/src/components/counter/Counter.css
@@ -1,17 +1,5 @@
-/* const buttonStyle = {
-    fontSize: "16px",
-    backgroundColor: "#00a5ab",
-    width: "100px",
-    margin: "10px",
-    color: "white",
-    padding: "15px",
-    borderRadius: "30px",
-
-}; */
-
-.counterButton {
+button{
     font-size: 16px;
-    background-color: #00a5ab;
     width: 100px;
     margin: 10px;
     color: white;
@@ -19,6 +7,14 @@
     border-radius: 30px;
     border-color: black;
     border-width: 5px;
+}
+
+.counterButton {
+    background-color: #00a5ab;
+}
+
+.resetButton {
+    background-color: #824f8c;
 }
 
 .count {
